# tildac

./: .gitignore  CMakeLists.txt  specification.txt
compiler/src/: main.cpp
compiler/tildac/: ast.cpp  ast.hpp  ast_printing.cpp  ast_printing.hpp  codegen.cpp  codegen.hpp  main.cpp  parser.cpp  parser.hpp  types.hpp  utility.hpp
test_programs/: function.tc  plain_funcs.tc  templated_variable.tc
tests/: main.tc
